# bookie

./: .dockerignore  .gitignore
backend/: Cargo.toml  Dockerfile
backend/src/: app_state.rs  google_places.rs  main.rs
backend/src/db/: setup.rs
backend/src/models/: structs.rs
backend/src/routes/: like.rs  matches.rs  mod.rs  places.rs
frontend/: App.js  app.json  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/constants/: colors.js
frontend/navigation/: AppNavigator.js
frontend/screens/: MatchesScreen.js  PlacesScreen.js
frontend/src_front/: App.css  App.tsx  api.ts  main.tsx  types.ts
frontend/src_front/components/: Home.tsx  Matches.tsx
