[package]
name = "rentinder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
